cmake_minimum_required(VERSION 3.11)
project(BerserkCore VERSION 1.0 LANGUAGES CXX)

set(Target_HEADERS
        BerserkCore.h
        BuildOptions.h
        Typedefs.h
        TestUtility.h
        TestMacro.h
        ErrorMacro.h
        LogMacro.h
        Error.h
        TPtr.h
        TPtrUnique.h
        TPtrShared.h
        TPair.h
        TEnumMask.h
        TPredicates.h
        TBytes.h
        TRef.h
        TimeValue.h
        Variant.h
        UUID.h
        Path.h
        Paths.h
        Alloc.h
        AllocPool.h
        AllocFrame.h
        Crc32.h
        Converter.h
        PixelFormat.h
        Resource.h
        ResourceImporters.h
        Image.h
        ImageImportOptions.h
        Module.h
        ModuleManager.h
        UpdateManager.h
        Engine.h
        Containers/TAlgo.h
        Containers/TIterable.h
        Containers/TArray.h
        Containers/TArrayStatic.h
        Containers/TMap.h
        Containers/TSet.h
        Containers/BinaryData.h
        Platform/Memory.h
        Platform/Mutex.h
        Platform/System.h
        Platform/File.h
        Platform/Directory.h
        Platform/Library.h
        Platform/Atomic.h
        Platform/Input.h
        Platform/Window.h
        Platform/WindowManager.h
        Platform/Async.h
        Platform/TSync.h
        Platform/Thread.h
        String/CString.h
        String/WString.h
        String/CStringStatic.h
        String/TString.h
        String/TStringUtility.h
        String/TStringStaticN.h
        String/CStringBuilder.h
        Math/Math.h
        Math/TVecN.h
        Math/Vec2f.h
        Math/Vec3f.h
        Math/Vec4f.h
        Math/Point2i.h
        Math/Random.h
        Math/TQuat.h
        Math/Quatf.h
        Math/TMatMxN.h
        Math/Mat4x4f.h
        Math/Color4.h
        Math/TRange.h
        Math/Region2i.h
        Math/TPlane.h
        Math/Planef.h
        Math/TAabb.h
        Math/Aabbf.h
        IO/Log.h
        IO/Logs.h
        IO/OutputDevice.h
        IO/JsonValue.h
        IO/JsonParser.h
        IO/JsonDocument.h
        IO/JsonPrinter.h
        IO/IniValue.h
        IO/IniParser.h
        IO/IniDocument.h
        IO/Config.h
        IO/Archive.h
        IO/ArchiveFile.h
        IO/ResourceImporter.h
        IO/ResourceImportOptions.h
        Reflection/ReflectionFlags.h
        Reflection/Method.h
        Reflection/Field.h
        Reflection/Object.h
        Reflection/Class.h
        RHI/RHIDevice.h
        RHI/RHIResources.h
        RHI/RHIResource.h
        RHI/RHIArrayObject.h
        RHI/RHIDrawList.h
        RHI/RHIFramebuffer.h
        RHI/RHIGraphicsPipeline.h
        RHI/RHIIndexBuffer.h
        RHI/RHISampler.h
        RHI/RHIShader.h
        RHI/RHITexture.h
        RHI/RHITimeQuery.h
        RHI/RHIUniformBuffer.h
        RHI/RHIUniformSet.h
        RHI/RHIVertexBuffer.h
        RHI/RHIVertexDeclaration.h
        RHI/RHIDefinitions.h
        RHI/RHIShaderMetaData.h
        Console/ConsoleManager.h
        Console/AutoVariable.h
        Console/AutoCommand.h

        )

set(Target_SOURCES
        Typedefs.cpp
        ErrorMacro.cpp
        TPtrShared.cpp
        Variant.cpp
        UUID.cpp
        Alloc.cpp
        AllocPool.cpp
        AllocFrame.cpp
        Crc32.cpp
        Paths.cpp
        PixelFormat.cpp
        Resource.cpp
        ResourceImporters.cpp
        Image.cpp
        ModuleManager.cpp
        UpdateManager.cpp
        Engine.cpp
        Containers/BinaryData.cpp
        Platform/Directory.cpp
        Platform/Memory.cpp
        Platform/Input.cpp
        Platform/System.cpp
        Platform/Window.cpp
        Platform/WindowManager.cpp
        Platform/Async.cpp
        Platform/Thread.cpp
        String/TString.cpp
        String/CString.cpp
        Math/Math.cpp
        Math/Vec3f.cpp
        Math/Vec4f.cpp
        Math/Color4.cpp
        IO/Log.cpp
        IO/Logs.cpp
        IO/OutputDevice.cpp
        IO/JsonParser.cpp
        IO/JsonDocument.cpp
        IO/JsonPrinter.cpp
        IO/IniParser.cpp
        IO/IniDocument.cpp
        IO/Archive.cpp
        IO/ArchiveFile.cpp
        IO/ResourceImporter.cpp
        Reflection/Method.cpp
        Reflection/Field.cpp
        Reflection/Object.cpp
        Reflection/Class.cpp
        RHI/RHIDefinitions.cpp
        RHI/RHIDevice.cpp
        RHI/RHIShaderMetaData.cpp
        Console/ConsoleManager.cpp
        Console/AutoVariable.cpp
        Console/AutoCommand.cpp

        )

add_library(BerserkCore SHARED ${Target_HEADERS} ${Target_SOURCES})
target_include_directories(BerserkCore PUBLIC ${CMAKE_CURRENT_LIST_DIR})

target_link_libraries(BerserkCore PUBLIC StbImageResize)
target_compile_features(BerserkCore PUBLIC cxx_std_11)

set_target_properties(BerserkCore PROPERTIES CXX_STANDARD 11)
set_target_properties(BerserkCore PROPERTIES CXX_STANDARD_REQUIRED YES)